--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
 <body>
     <h1>Shang-Chun (Luke) Lu</h1>
     <h2 style="font-size: 1.5em;">AI Research Scientist</h2>
-    <p>with experience at MIT as a Grad Student Scientist.</p>
     <p>Specializing in Reasoning models, Generative AI Agents, Large Language Models (LLMs), and Vision-Language Models (VLMs).</p>
     <p>Expertise in training deep learning models like Transformers, VAEs, and CNNs at companies including Intel, SanDisk, and AI startups.</p>
-    <p>PhD in Electrical and Computer Engineering from UIUC (2019), with additional work at NTU. Over 10 publications and 7 conference presentations.</p>
-    <p>Connect with me at <a href="https://www.linkedin.com/in/shang-chun-luke-lu-0ba29358/">linkedin</a>, <a href="<a href="https://x.com/groccy1/">X</a>, <a href="https://scholar.google.com/citations?user=lPBJ1okAAAAJ&hl=en">google scholar</a> or at lukelu0975 at gmail dot com!</p>
+    <p>PhD in Electrical and Computer Engineering from UIUC (2019), co-advised at MIT 2017-2019, and additional work at NTU. Over 10 publications and 7 conference presentations.</p>
+    <p>Connect with me at <a href="https://www.linkedin.com/in/shang-chun-luke-lu-0ba29358/">linkedin</a>, <a href="https://x.com/groccy1/">X</a>, <a href="https://scholar.google.com/citations?user=lPBJ1okAAAAJ&hl=en">google scholar</a> or at lukelu0975 at gmail dot com!</p>
 
     <h2>Work Experience</h2>
     <ul>
@@ -44,7 +43,7 @@
         <li><strong>Visiting Scientist, MIT (Dec 2017 – April 2019)</strong>: Designed post-CMOS transistors and explored materials for quantum computing using DFT + ML and NEGF for electron transport simulations.</li>
     </ul>
 
-    <h2>Publications</h2>
+    <h2>Selected Journal Publications</h2>
     <ol>
         <li><a href="https://ieeexplore.ieee.org/document/8625493/">Superior Performance of 5 nm Gate Length GaN Nanowire nFET for Digital Logic Applications</a>, Y. Chu, S.-C. Lu, et al., IEEE Electron Device Letters, vol. 40, no. 6, pp. 874-877, 2019.</li>
         <li><a href="https://iopscience.iop.org/article/10.1088/2053-1583/3/1/011010/meta">Novel Vertical Hetero- and Homo-junction Designs for Tunnel FETs based on 2D Crystals</a>, S.-C. Lu, M. Mohamed, W. Zhu, 2D Materials 3, 011010, 2016.</li>
@@ -65,3 +64,4 @@
     </ol>
 </body>
 </html>
+
