--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h2 style="font-size: 1.5em;">AI Research Scientist</h2>
     <p>Specializing in Reasoning models, Generative AI Agents, Large Language Models (LLMs), and Vision-Language Models (VLMs).</p>
     <p>Expertise in training deep learning models like Transformers, VAEs, and CNNs at companies including Intel, SanDisk, and AI startups.</p>
-    <p>PhD in Electrical and Computer Engineering from UIUC (2019), co-advised at MIT EECS 2017-2019, and additional work at NTU. Over 10 publications and 7 conference presentations.</p>
+    <p>PhD in ECE from UIUC (2019), co-advised at MIT EECS 2017-2019, and additional work at NTU. Over 10 publications and 7 conference presentations.</p>
     <p>Connect with me at <a href="https://www.linkedin.com/in/shang-chun-luke-lu-0ba29358/">linkedin</a>, <a href="https://x.com/groccy1/">X</a>, <a href="https://scholar.google.com/citations?user=lPBJ1okAAAAJ&hl=en">google scholar</a> or at lukelu0975 at gmail dot com!</p>
 
     <h2>Work Experience</h2>
@@ -56,13 +56,14 @@
     <h2>Selected Conferences</h2>
     <ol>
         <li>CoVaPh: A Vision-Language Multi-Agent System for Tool-Augmented Pharmacogenetic Reasoning and Personalized Guidance, S.-C. Lu et al., submitted to AAAI-26.</li>
-        <li><a href="https://ieeexplore.ieee.org/document/8625520/">Atomistic Design of Multilayer Black Phosphorus Vertical Tunnel FETs based on Coupled DFT and NEGF method</a>, S.-C. Lu et al., 20th IWCN, Evanston, IL, May 20-24, 2019.</li>
-        <li><a href="https://ieeexplore.ieee.org/document/8528722/">Design Guidelines and Limitations of Multilayer Two-dimensional Vertical Tunneling FETs for Ultra Low Power Logic Applications</a>, S.-C. Lu et al., SISPAD 2018, Austin, TX, Sept. 24-26, 2018.</li>
+        <li>Atomistic Design of Multilayer Black Phosphorus Vertical Tunnel FETs based on Coupled DFT and NEGF method</a>, S.-C. Lu et al., 20th IWCN, Evanston, IL, May 20-24, 2019.</li>
+        <li>Design Guidelines and Limitations of Multilayer Two-dimensional Vertical Tunneling FETs for Ultra Low Power Logic Applications</a>, S.-C. Lu et al., SISPAD 2018, Austin, TX, Sept. 24-26, 2018.</li>
         <li><a href="https://ieeexplore.ieee.org/document/8085335/">Modeling of black phosphorus vertical TFETs without chemical doping for drain</a>, S.-C. Lu et al., SISPAD 2017, Kamakura, Japan, Sept. 7-9, 2017.</li>
         <li>Layer-dependent performance of ultra-short asymmetric Black Phosphorus vertical TFETs without chemical doping, S.-C. Lu et al., Edison’20, Buffalo, NY, July 16-21, 2017.</li>
         <li>First-principles Study of GeO2/Ge Interfacial Traps and Oxide Defects, S.-C Lu et al., 6th ISTDM, Berkeley, CA, June 4-6, 2012.</li>
     </ol>
 </body>
 </html>
+
 
 
