--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <h1>Shang-Chun (Luke) Lu</h1>
     <h2 style="font-size: 1.5em;">AI Research Scientist</h2>
-    <p>Specializing in Reasoning models, Generative AI Agents, Large Language Models (LLMs), and Vision-Language Models (VLMs).</p>
+    <p>Specializing in Reasoning models, Generative AI Agents, Large Language Models (LLMs), Vision-Language Models (VLMs), and World Foundation Models for robotics.</p>
     <p>Expertise in training deep learning models like Transformers, VAEs, and CNNs at companies including Intel, SanDisk, and AI startups.</p>
     <p>PhD in ECE from UIUC (2019), co-advised at MIT EECS 2017-2019, and additional work at NTU. Over 10 publications and 7 conference presentations.</p>
     <p>Connect with me at <a href="https://www.linkedin.com/in/shang-chun-luke-lu-0ba29358/">linkedin</a>, <a href="https://x.com/groccy1/">X</a>, <a href="https://scholar.google.com/citations?user=lPBJ1okAAAAJ&hl=en">google scholar</a> or at lukelu0975 at gmail dot com!</p>
@@ -64,6 +64,7 @@
     </ol>
 </body>
 </html>
+
 
 
 
