--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
         <li><strong>Visiting Scientist, MIT (Dec 2017 – April 2019)</strong>: Designed post-CMOS transistors and explored materials for quantum computing using DFT + ML and NEGF for electron transport simulations.</li>
     </ul>
 
+    <h2>Selected Conferences</h2>
+    <ol>
+        <li>CoVaPh: A Vision-Language Multi-Agent System for Tool-Augmented Pharmacogenetic Reasoning and Personalized Guidance, S.-C. Lu et al., submitted to AAAI-26.</li>
+        <li>Atomistic Design of Multilayer Black Phosphorus Vertical Tunnel FETs based on Coupled DFT and NEGF method, S.-C. Lu et al., 20th IWCN, Evanston, IL, May 20-24, 2019.</li>
+        <li>Design Guidelines and Limitations of Multilayer Two-dimensional Vertical Tunneling FETs for Ultra Low Power Logic Applications, S.-C. Lu et al., SISPAD 2018, Austin, TX, Sept. 24-26, 2018.</li>
+        <li><a href="https://ieeexplore.ieee.org/document/8085335/">Modeling of black phosphorus vertical TFETs without chemical doping for drain</a>, S.-C. Lu et al., SISPAD 2017, Kamakura, Japan, Sept. 7-9, 2017.</li>
+        <li>Layer-dependent performance of ultra-short asymmetric Black Phosphorus vertical TFETs without chemical doping, S.-C. Lu et al., Edison’20, Buffalo, NY, July 16-21, 2017.</li>
+        <li>First-principles Study of GeO2/Ge Interfacial Traps and Oxide Defects, S.-C Lu et al., 6th ISTDM, Berkeley, CA, June 4-6, 2012.</li>
+    </ol>
+
     <h2>Selected Journal Publications</h2>
     <ol>
         <li><a href="https://ieeexplore.ieee.org/document/8625493/">Superior Performance of 5 nm Gate Length GaN Nanowire nFET for Digital Logic Applications</a>, Y. Chu, S.-C. Lu, et al., IEEE Electron Device Letters, vol. 40, no. 6, pp. 874-877, 2019.</li>
@@ -51,19 +61,10 @@
         <li><a href="https://pubs.aip.org/aip/apl/article/101/4/042111/111650/Mobility-enhancement-of-strained-Si-by-optimized">Mobility enhancement of strained Si by optimized SiGe/Si/SiGe structures</a>, S.-H. Huang, T.-M. Lu, S.-C. Lu, et al., Appl. Phys. Lett. 101, 042111, 2012.</li>
         <li><a href="https://pubs.aip.org/aip/jap/article/111/7/076105/391440/First-principles-study-of-Ge-dangling-bonds-with">First-principles study of Ge dangling bonds with different oxygen backbonds at Ge/GeO2 interface</a>, H.-C. Chang, S.-C. Lu, T.-P. Chou, et al., J. Appl. Phys. 111, 076105, 2012.</li>
         <li><a href="https://pubs.aip.org/aip/apl/article/100/2/023508/904129/Surface-passivation-of-Cu-In-Ga-Se2-using-atomic">Surface Passivation of Cu(In,Ga)Se2 Using Atomic Layer Deposited Al2O3</a>, W.-W. Hsu, J. Y. Chen, T.-H. Cheng, et al., Appl. Phys. Lett. 100, 023508, 2012.</li>
-    </ol>
-
-    <h2>Selected Conferences</h2>
-    <ol>
-        <li>CoVaPh: A Vision-Language Multi-Agent System for Tool-Augmented Pharmacogenetic Reasoning and Personalized Guidance, S.-C. Lu et al., submitted to AAAI-26.</li>
-        <li>Atomistic Design of Multilayer Black Phosphorus Vertical Tunnel FETs based on Coupled DFT and NEGF method</a>, S.-C. Lu et al., 20th IWCN, Evanston, IL, May 20-24, 2019.</li>
-        <li>Design Guidelines and Limitations of Multilayer Two-dimensional Vertical Tunneling FETs for Ultra Low Power Logic Applications</a>, S.-C. Lu et al., SISPAD 2018, Austin, TX, Sept. 24-26, 2018.</li>
-        <li><a href="https://ieeexplore.ieee.org/document/8085335/">Modeling of black phosphorus vertical TFETs without chemical doping for drain</a>, S.-C. Lu et al., SISPAD 2017, Kamakura, Japan, Sept. 7-9, 2017.</li>
-        <li>Layer-dependent performance of ultra-short asymmetric Black Phosphorus vertical TFETs without chemical doping, S.-C. Lu et al., Edison’20, Buffalo, NY, July 16-21, 2017.</li>
-        <li>First-principles Study of GeO2/Ge Interfacial Traps and Oxide Defects, S.-C Lu et al., 6th ISTDM, Berkeley, CA, June 4-6, 2012.</li>
-    </ol>
+    </ol>    
 </body>
 </html>
+
 
 
 
