--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-a<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -61,6 +61,7 @@ a<!DOCTYPE html>
     </ol>    
 </body>
 </html>
+
 
 
 
