--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li><strong>Staff R&D Engineer, Deep Learning, SanDisk (May 2020 – Nov 2023)</strong>: Led DL projects like training Mask-RCNN/Transformers for wafer inspection (reducing time by 90%+), SAM auto-labelers, LLM fine-tuning for semiconductor data, and VAEs for pattern generation.</li>
         <li><strong>Personal AI Project (2021 – 2022)</strong>: Used Mask-RCNN, CNN, and GenAI to create digital arts.</li>
         <li><strong>Transistor Reliability R&D Engineer / Data Scientist, Intel Corp. (May 2019 – May 2020)</strong>: Analyzed transistor reliability using ML models (e.g., regression, random forest) to automate data processing and support process development.</li>
-        <li><strong>Visiting Scientist, MIT (Dec 2017 – April 2019)</strong>: Designed post-CMOS transistors and explored materials for quantum computing using DFT + ML and NEGF for electron transport simulations.</li>
+        <li><strong>Visiting Student Scientist, MIT (Dec 2017 – April 2019)</strong>: Designed post-CMOS transistors and explored materials for quantum computing using DFT + ML and NEGF for electron transport simulations.</li>
     </ul>
 
     <h2>Selected Conferences</h2>
@@ -61,6 +61,7 @@
     </ol>    
 </body>
 </html>
+
 
 
 
