--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 </head>
 <body>
     <h1>Shang-Chun (Luke) Lu</h1>
-    <h2 style="font-size: 1.5em;">AI Research Scientist</h2>
-    <p>Specializing in Reasoning models, Generative AI Agents, Large Language Models (LLMs), Vision-Language Models (VLMs), and World Foundation Models for robotics.</p>
+    <h2 style="font-size: 1.5em;">AI Research Faculty @ NCKU School of Computing</h2>
+    <p>My research focuses on Reasoning models, Agentic AI, Large Language Models (LLMs), Vision-Language Models (VLMs), and World Foundation Models for robotics.</p>
     <p>Expertise in training neural nets like Transformers (vision and language), VAEs, and CNNs at companies including Intel, SanDisk, and AI startups.</p>
-    <p>PhD in ECE from UIUC (2019), co-advised at MIT EECS 2017-2019, and additional work at NTU Physics and EE. Over 10 publications and 7 conference presentations.</p>
+    <p>I received my <h2>PhD<h2> in <h2>ECE from UIUC<h2> (2019), co-advised at <h2>MIT EECS<h2> 2017-2019, and a bachelor's degree from <h2>NTU Physics<h2> and a master's from <h2>NTU EE<h2>. Over 10 publications and 7 conference presentations.</p>
     <p>Connect with me at <a href="https://www.linkedin.com/in/shang-chun-luke-lu-0ba29358/">linkedin</a>, <a href="https://x.com/groccy1/">X</a>, <a href="https://scholar.google.com/citations?user=lPBJ1okAAAAJ&hl=en">google scholar</a> or at lukelu0975 at gmail dot com!</p>
 
     <h2>Work Experience</h2>
@@ -61,6 +61,7 @@
     </ol>    
 </body>
 </html>
+
 
 
 
