--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p>My research focuses on <strong>Reasoning models, Agentic AI, Large Language Models (LLMs), Vision-Language Models (VLMs), and World Foundation Models for robotics.</strong></p>
     <p>Expertise in training advanced neural nets at companies including Intel, SanDisk, and more recently, AI startups.</p>
     <p>I received my <strong>PhD</strong> in <strong>ECE from UIUC</strong> (2019), co-advised at <strong>MIT EECS</strong> 2017-2019, and a bachelor's degree from <strong>NTU Physics</strong> and a master's from <strong>NTU EE</strong>. Over 10 publications and 7 conference presentations.</p>
-    <p>Connect with me at <a href="https://www.linkedin.com/in/shang-chun-luke-lu-0ba29358/">linkedin</a>, <a href="https://x.com/groccy1/">X</a>, <a href="https://scholar.google.com/citations?user=lPBJ1okAAAAJ&hl=en">google scholar</a> or at lukelu0975 at gmail dot com!</p>
+    <p>Connect with me at <a href="https://www.linkedin.com/in/shang-chun-luke-lu-0ba29358/">linkedin</a>, <a href="https://x.com/groccy1/">X</a>, <a href="https://scholar.google.com/citations?user=lPBJ1okAAAAJ&hl=en">google scholar</a> or at E: lukelu0975 at gmail dot com and Ph: US: (872) 256-8653 | TW: +886 6-2757575#80981!</p>
 
     <h2>Work Experience</h2>
     <ul>
@@ -61,6 +61,7 @@
     </ol>    
 </body>
 </html>
+
 
 
 
