--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shang-Chun (Luke) Lu - AI Researcher</title>
-    <style>
-        body {
+<!--     <style> -->
+<!--         body {
             font-family: Arial, sans-serif;
             margin: 40px;
             line-height: 1.6;
@@ -20,6 +20,29 @@
         }
         h1, h2 {
             font-weight: bold;
+        }
+    </style> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            line-height: 1.6;
+            max-width: 800px;
+        }
+        a {
+            color: #0066cc;
+            text-decoration: none;
+            margin-right: 15px;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        h1, h2 {
+            font-weight: bold;
+        }
+        .contact span {
+            margin-right: 15px;
         }
     </style>
 </head>
@@ -69,6 +92,7 @@
     </ol>    
 </body>
 </html>
+
 
 
 
