--- a/index.html
+++ b/index.html
@@ -49,14 +49,13 @@
 <body>
     <h1>Shang-Chun (Luke) Lu</h1>
     <h2 style="font-size: 1.5em;">AI Research Faculty @ NCKU School of Computing</h2>
-    <p>Connect with me at</p>
-    <p class="contact">
+    <p>Connect with me at</p><p class="contact">
         <a href="mailto:lukelu0975@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
         <a href="https://x.com/groccy1/">X</a>
         <a href="https://www.linkedin.com/in/shang-chun-luke-lu-0ba29358/" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
         <a href="https://scholar.google.com/citations?user=lPBJ1okAAAAJ&hl=en" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
-        <span title="US Phone"><i class="fas fa-phone"></i> (872) 256-8653</span>
-        <span title="TW Phone"><i class="fas fa-phone"></i> +886 6-2757575 # 80981</span>
+        <span title="US Phone"><i class="fas fa-phone"></i> US: (872) 256-8653</span>
+        <span title="TW Phone"><i class="fas fa-phone"></i> TW: +886 6-2757575 # 80981</span>
     </p>
     <p>My research focuses on <strong>Reasoning models, Agentic AI, Large Language Models (LLMs), Vision-Language Models (VLMs), and World Foundation Models for robotics.</strong></p>
     <p>Expertise in training advanced neural nets at companies including Intel, SanDisk, and more recently, AI startups.</p>
@@ -93,6 +92,7 @@
     </ol>    
 </body>
 </html>
+
 
 
 
