--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
 <body>
     <h1>Shang-Chun (Luke) Lu</h1>
     <h2 style="font-size: 1.5em;">AI Research Faculty @ NCKU School of Computing</h2>
-    <p class="contact">
-        <p>Connect with me at</p>
-        <a href="mailto:lukelu0975@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
+    <p class="contact">   
+        <p>Connect with me at</p><a href="mailto:lukelu0975@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
         <a href="https://x.com/groccy1/">X</a>
         <a href="https://www.linkedin.com/in/shang-chun-luke-lu-0ba29358/" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
         <a href="https://scholar.google.com/citations?user=lPBJ1okAAAAJ&hl=en" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
@@ -93,6 +92,7 @@
     </ol>    
 </body>
 </html>
+
 
 
 
