--- a/index.html
+++ b/index.html
@@ -41,8 +41,22 @@
         h1, h2 {
             font-weight: bold;
         }
+        .contact {
+            display: flex;
+            align-items: center;
+        }
         .contact span {
             margin-right: 15px;
+        }
+        .profile-photo {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .profile-photo img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
         }
     </style>
 </head>
@@ -92,6 +106,7 @@
     </ol>    
 </body>
 </html>
+
 
 
 
