--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
         .contact {
             display: flex;
             align-items: center;
-        }
-        .contact span {
-            margin-right: 15px;
+            gap: 15px;
         }
         .profile-photo {
             text-align: center;
@@ -59,6 +57,7 @@
             object-fit: cover;
         }
     </style>
+</head>
 </head>
 <body>
     <h1>Shang-Chun (Luke) Lu</h1>
@@ -106,6 +105,7 @@
     </ol>    
 </body>
 </html>
+
 
 
 
