--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         a {
             color: #0066cc;
             text-decoration: none;
-            margin-right: 12px;
+            margin-right: 11px;
         }
         a:hover {
             text-decoration: underline;
         }
-        h1, h2 {
+        h1, h2, h3 {
             font-weight: bold;
         }
         .contact {
@@ -61,7 +61,8 @@
 </head>
 <body>
     <h1>Shang-Chun (Luke) Lu</h1>
-    <h2 style="font-size: 1.5em;">AI Research Faculty @ NCKU School of Computing and @ Startups</h2>
+    <h2 style="font-size: 1.5em;">AI Research Faculty</h2> 
+    <h3 style="font-size: 1.5em;">at NCKU School of Computing and at Startups</h3>
     <p class="contact">Connect with me at:     
         <a href="mailto:lukelu0975@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
         <a href="https://x.com/groccy1/">X</a>
@@ -105,6 +106,7 @@
     </ol>    
 </body>
 </html>
+
 
 
 
