--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
 </head>
 <body>
     <h1>Shang-Chun (Luke) Lu</h1>
-    <h2 style="font-size: 1.5em;">AI Research Faculty</h2> 
-    <h3 style="font-size: 1.5em;">at NCKU School of Computing and at Startups</h3>
+    <h2 style="font-size: 1.5em;">AI Research Faculty @ NCKU School of Computing and @ Startups</h2>
     <p class="contact">Connect with me at:     
         <a href="mailto:lukelu0975@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
         <a href="https://x.com/groccy1/">X</a>
@@ -106,6 +105,7 @@
     </ol>    
 </body>
 </html>
+
 
 
 
