--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 40px;
+            margin: 40px auto;
             line-height: 1.6;
             max-width: 800px;
         }
@@ -105,6 +105,7 @@
     </ol>    
 </body>
 </html>
+
 
 
 
