--- a/index.html
+++ b/index.html
@@ -29,22 +29,27 @@
             margin: 40px auto;
             line-height: 1.6;
             max-width: 800px;
+            min-height: 100vh; /* Ensure full viewport height */
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
         a {
             color: #0066cc;
             text-decoration: none;
-            margin-right: 11px;
         }
         a:hover {
             text-decoration: underline;
         }
-        h1, h2, h3 {
+        h1, h2 {
             font-weight: bold;
+            text-align: center; /* Center the name */
         }
         .contact {
             display: flex;
             align-items: center;
             gap: 15px;
+            justify-content: center; /* Center the contact line */
         }
         .profile-photo {
             text-align: center;
@@ -55,6 +60,16 @@
             height: 150px;
             border-radius: 50%;
             object-fit: cover;
+        }
+        /* Ensure content stays centered and doesn't stretch unnaturally */
+        .content {
+            flex: 1 0 auto;
+        }
+        /* Footer-like behavior for the bottom */
+        footer {
+            flex-shrink: 0;
+            text-align: center;
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -105,6 +120,7 @@
     </ol>    
 </body>
 </html>
+
 
 
 
