--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <ul>
         <li><strong>AI Research Faculty, Miin Wu School of Computing, NCKU (Feb 2025 – present)</strong>: Launching AI R&D initiatives, including post-training Thinking LLMs/VLMs with advanced reasoning, vision RAG agents for medical use, finetuning Robotics models, and planning AI infrastructure.</li>
         <li><strong>VLM Advisor/Lead Architect, Rayleigh Vision Intelligence Co. Ltd. (Dec 2024 – present)</strong>: Architecting VLM solutions and coordinating with infra/manufacturing teams to support Micro LED customers.</li>
-        <li><strong>3D Gen AI Consultant, Stealth AI Startup (July 2024 – present)</strong>: Advising on 3D World Models for generative AI applications.</li>
+        <li><strong>3D Gen AI Consultant, Stealth AI Startup from Stanford University (July 2024 – present)</strong>: Advising on generalized agents for generative AI applications.</li>
         <li><strong>Head of Gen AI, Rengiantek AI (Dec 2023 – Dec 2024)</strong>: Led projects building RAG Agents with LangGraph, finetuning LLMs for academic peer reviews, and developing fall detection visual AI agents using Nvidia tools for eldercare in large facilities.</li>
         <li><strong>Staff R&D Engineer, Deep Learning, SanDisk (May 2020 – Nov 2023)</strong>: Led DL projects like training Mask-RCNN/Transformers for wafer inspection (reducing time by 90%+), SAM auto-labelers, LLM fine-tuning for semiconductor data, and VAEs for pattern generation.</li>
         <li><strong>Personal AI Project (2021 – 2022)</strong>: Used Mask-RCNN, CNN, and GenAI to create digital arts.</li>
@@ -120,6 +120,7 @@
     </ol>    
 </body>
 </html>
+
 
 
 
