--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
             text-align: center;
             margin-top: 20px;
         }
+        .announcements {
+            text-align: center;
+            margin: 20px 0;
+            font-weight: bold;
+            color: #2c3e50;
+        }
+        .announcements p {
+            margin: 10px 0;
+            font-size: 1.1em;
+        }
     </style>
 </head>
 </head>
@@ -88,6 +98,12 @@
     <p>My research focuses on <strong>Reasoning models, Agentic AI, Large Language Models (LLMs), Vision-Language Models (VLMs), and World Foundation Models for robotics.</strong></p>
     <p>Expertise in training advanced neural nets at companies including Intel, SanDisk, and more recently, AI startups.</p>
     <p>I received my <strong>PhD</strong> in <strong>ECE from UIUC</strong> (2019), co-advised at <strong>MIT EECS</strong> 2017-2019, and a bachelor's degree from <strong>NTU Physics</strong> and a master's from <strong>NTU EE</strong>. Over 10 publications and 7 conference presentations.</p>
+
+
+    <div class="announcements">
+        <p>🎉 Exciting News! Our project "AI for Walking Stability Assessment with 3D Virtual Environment Training" has been selected by Nvidia for the 2025 Nvidia Academic Grant Award, granting us 32,000 A100 GPU-Hours!</p>
+        <p>🌟 We’re Hiring! Join our team! We invite brilliant AI researchers and passionate students worldwide, especially those excited about vision AIs, reasoning LLMs, and robotics, to help advance this cutting-edge field!</p>
+    </div>
 
 
     <h2>Work Experience</h2>
@@ -120,6 +136,7 @@
     </ol>    
 </body>
 </html>
+
 
 
 
