--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <div class="announcements">
             <p><span class="blinking-emoji">🎉</span> Exciting News! Our project "AI for Walking Stability Assessment with 3D Virtual Environment Training" together with Stanford researchers has been selected by Nvidia for the 2025 Nvidia Academic Grant Award, granting us 32,000 A100 GPU-Hours!</p>
-            <p><span class="blinking-emoji">🌟</span> We’re Hiring! Join our team! We invite brilliant AI researchers and passionate students worldwide, especially those excited about vision AIs, reasoning LLMs, and robotics, to help advance this cutting-edge field!</p>
+            <p><span class="blinking-emoji">🌟</span> We’re Hiring! Join our team! We invite brilliant AI researchers and passionate students worldwide, especially those excited about artificial spatial intelligence, reasoning LLMs, and robotics, to help advance this cutting-edge field!</p>
         </div>
     
         <p>My research focuses on <strong>Reasoning models, Agentic AI, Large Language Models (LLMs), Vision-Language Models (VLMs), and World Foundation Models for robotics.</strong></p>
@@ -148,6 +148,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
