--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     
         <h2>Selected Conferences</h2>
         <ol>
-            <li>CoVaPh: A Vision-Language Multi-Agent Dialogue System for Tool-Augmented Pharmacogenetic Reasoning and Personalized Guidance, S.-C. Lu and Hsin Yang et al., submitted to ACL IWSDS 2026.</li>
+            <li>CoVaPh: A Vision-Language Multi-Agent Dialogue System for Tool-Augmented Pharmacogenetic Reasoning and Personalized Guidance, S.-C. Lu, H Yang et al., submitted to ACL IWSDS 2026.</li>
             <li>Atomistic Design of Multilayer Black Phosphorus Vertical Tunnel FETs based on Coupled DFT and NEGF method, S.-C. Lu et al., 20th IWCN, Evanston, IL, May 20-24, 2019.</li>
             <li>Design Guidelines and Limitations of Multilayer Two-dimensional Vertical Tunneling FETs for Ultra Low Power Logic Applications, S.-C. Lu et al., SISPAD 2018, Austin, TX, Sept. 24-26, 2018.</li>
             <li><a href="https://ieeexplore.ieee.org/document/8085335/">Modeling of black phosphorus vertical TFETs without chemical doping for drain</a>, S.-C. Lu et al., SISPAD 2017, Kamakura, Japan, Sept. 7-9, 2017.</li>
@@ -140,7 +140,7 @@
             <li><a href="https://iopscience.iop.org/article/10.1088/2053-1583/3/1/011010/meta">Novel Vertical Hetero- and Homo-junction Designs for Tunnel FETs based on 2D Crystals</a>, S.-C. Lu, M. Mohamed, W. Zhu, 2D Materials 3, 011010, 2016.</li>
             <li><a href="https://link.springer.com/article/10.1186/1556-276X-9-676">Electronic structures of defects and magnetic impurities in MoS2 monolayers</a>, S.-C. Lu, J.-P. Leburton, Nanoscale Research Letters, 9:676, 2014.</li>
             <li><a href="https://pubs.aip.org/aip/jap/article/111/7/076105/391440/First-principles-study-of-Ge-dangling-bonds-with">First-principles study of Ge dangling bonds with different oxygen backbonds at Ge/GeO2 interface</a>, H.-C. Chang, S.-C. Lu, T.-P. Chou, et al., J. Appl. Phys. 111, 076105, 2012.</li>
-            <li><a href="https://pubs.aip.org/aip/apl/article/100/2/023508/904129/Surface-passivation-of-Cu-In-Ga-Se2-using-atomic">Surface Passivation of Cu(In,Ga)Se2 Using Atomic Layer Deposited Al2O3</a>, W.-W. Hsu, J. Y. Chen, T.-H. Cheng, et al., Appl. Phys. Lett. 100, 023508, 2012.</li>
+            <li><a href="https://pubs.aip.org/aip/apl/article/100/2/023508/904129/Surface-passivation-of-Cu-In-Ga-Se2-using-atomic">Surface Passivation of Cu(In,Ga)Se2 Using Atomic Layer Deposited Al2O3</a>, W.-W. Hsu, J. Y. Chen, T.-H. Cheng, S.-C. Lu, et al., Appl. Phys. Lett. 100, 023508, 2012.</li>
         </ol>    
     </div>
     <footer>
@@ -148,6 +148,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
