--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <p><span class="blinking-emoji">🌟</span> We’re Hiring! Join our team! We invite brilliant AI researchers and passionate students worldwide, especially those excited about spatial AI, reasoning LLMs, and robotics, to help advance this cutting-edge field!</p>
         </div>
     
-        <p>My research focuses on:</p> 
+        <p>MY RESEARCH FOCUSES ON:</p> 
         <p><strong>Reasoning LLMs/VLMs, Agentic AI, Pixel-space Diffusion/VLMs for robotics World Models.</strong></p> 
         <p>Expertise in training advanced neural nets at companies including Intel, SanDisk, and recently, with Nvidia and AI startups.</p>
         <p>I received my <strong>PhD</strong> in <strong>ECE from UIUC</strong> (2019), co-advised at <strong>MIT EECS</strong> 2017-2019, and a bachelor's degree from <strong>NTU Physics</strong> and a master's from <strong>NTU EE</strong>. Over 10 publications and 7 conference presentations.</p>
@@ -149,6 +149,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
