--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     
         <h2>Work Experience</h2>
         <ul>
-            <li><strong>AI Research Faculty, Miin Wu School of Computing, NCKU (Feb 2025 – present)</strong>: Launching AI R&D initiatives, including post-training Thinking LLMs/VLMs with advanced reasoning, visual RAG reasoning agents for medical use, finetuning Robotics models, and planning AI infrastructure.</li>
+            <li><strong>Praincipal Investigator in AI, Miin Wu School of Computing, NCKU (Feb 2025 – present)</strong>: Launching AI R&D initiatives, including post-training Thinking LLMs/VLMs with advanced reasoning, visual RAG reasoning agents for medical use, finetuning Robotics models, and planning AI infrastructure.</li>
             <li><strong>VLM Advisor/Lead Architect, Rayleigh Vision Intelligence Co. Ltd. (Dec 2024 – present)</strong>: Architecting VLM solutions and coordinating with infra/manufacturing teams to support Micro LED customers.</li>
             <li><strong>3D Gen AI Consultant, Stealth AI Startup from Stanford University (July 2024 – present)</strong>: Advising on generalized agents for 3D generative AI applications.</li>
             <li><strong>Head of Gen AI, Rengiantek AI (Dec 2023 – Dec 2024)</strong>: Led projects building RAG Agents with LangGraph, finetuning LLMs for academic peer reviews, and developing fall detection visual AI agents using Nvidia tools for eldercare in large facilities.</li>
@@ -149,6 +149,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
