--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <p><span class="blinking-emoji">🌟</span> We’re Hiring! Join our team! We invite brilliant AI researchers and passionate students worldwide, especially those excited about spatial AI, reasoning LLMs, and robotics, to help advance this cutting-edge field!</p>
         </div>
     
-        <p style="text-align: center;">MY RESEARCH FOCUSES ON:</p> 
+        <p style="text-align: center;">MY CURRENT RESEARCH FOCUSES:</p> 
         <p style="text-align: center;"><strong>Reasoning LLMs/VLMs, Agentic AI, Pixel-space Diffusion/VLMs for robotics World Models.</strong></p> 
         <p>Experience in leading advanced neural nets research at tech companies, including Intel, SanDisk, and recently, with Nvidia and AI startups.</p>
         <p>I received my <strong>PhD</strong> in <strong>ECE from UIUC</strong> (2019), co-advised at <strong>MIT EECS</strong> 2017-2019 in Cambridge, MA, and a bachelor's degree from <strong>NTU Physics</strong> and a master's from <strong>NTU EE</strong>. 10+ publications and 7+ conference presentations.</p>
@@ -149,6 +149,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
