--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <div class="announcements">
             <p><span class="blinking-emoji">🎉</span> Exciting News! Our project, "AI for Walking Stability Assessment with 3D Virtual Environment Training" with Stanford researchers, has been selected by Nvidia for the 2025 Nvidia Academic Grant Award, granting us 40,000 A100 GPU-Hours!</p>
-            <p><span class="blinking-emoji">🌟</span> We’re Hiring! Join our team! We invite brilliant AI researchers and passionate students worldwide, especially those excited about spatial AI, reasoning LLMs, and robotics, to help advance this cutting-edge field!</p>
+            <p><span class="blinking-emoji">🌟</span> We’re Hiring! Join our team! We invite brilliant AI researchers and passionate students worldwide, especially those excited about spatial AI, reasoning VLMs/LLMs, and robotics, to help advance this cutting-edge field!</p>
         </div>
     
         <p style="text-align: center;">MY CURRENT RESEARCH FOCUSES:</p> 
@@ -117,9 +117,8 @@
     
         <h2>Work Experience</h2>
         <ul>
-            <li><strong>Principal Investigator in AI, Miin Wu School of Computing, NCKU (Feb 2025 – present)</strong>: Launching AI R&D initiatives, including post-training Thinking LLMs/VLMs with advanced reasoning, visual RAG reasoning agents for medical use, finetuning Robotics models, and planning AI infrastructure.</li>
+            <li><strong>Principal Investigator in AI, Miin Wu School of Computing, NCKU (Feb 2025 – present)</strong>: Launching AI R&D initiatives, including post-training Thinking LLMs/VLMs with advanced reasoning, visual RAG reasoning agents for medical use, finetuning Robotics models (with 3D World Models), and planning AI infrastructure.</li>
             <li><strong>VLM Advisor/Lead Architect, Rayleigh Vision Intelligence Co. Ltd. (Dec 2024 – present)</strong>: Architecting VLM solutions and coordinating with infra/manufacturing teams to support Micro LED customers.</li>
-            <li><strong>3D Gen AI Consultant, Stealth AI Startup from Stanford University (July 2024 – present)</strong>: Advising on generalized agents for 3D generative AI applications.</li>
             <li><strong>Head of Gen AI, Rengiantek AI (Dec 2023 – Dec 2024)</strong>: Led projects building RAG Agents with LangGraph, finetuning LLMs for academic peer reviews, and developing fall detection visual AI agents using Nvidia tools for eldercare in large facilities.</li>
             <li><strong>Staff R&D Engineer, Deep Learning, SanDisk (May 2020 – Nov 2023)</strong>: Led DL projects like training Mask-RCNN/Transformers for wafer inspection (reducing time by 90%+), SAM auto-labelers, LLM fine-tuning for semiconductor data, and VAEs for pattern generation.</li>
             <li><strong>Personal AI Project (2021 – 2022)</strong>: Used Mask-RCNN, CNN, and GenAI to create digital arts.</li>
@@ -149,6 +148,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
