--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shang-Chun (Luke) Lu - AI Researcher</title>
+    <title>Luke (Shang-Chun) Lu - AI Researcher</title>
 <!--     <style> -->
 <!--         body {
             font-family: Arial, sans-serif;
@@ -144,10 +144,11 @@
         </ol>    
     </div>
     <footer>
-        <p>&copy; 2025 Shang-Chun (Luke) Lu. All rights reserved.</p>
+        <p>&copy; 2025 Luke (Shang-Chun) Lu. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
 
 
 
