--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </head>
 <body>
     <div class="content">
-        <h1>Shang-Chun (Luke) Lu</h1>
+        <h1>Luke (Shang-Chun) Lu</h1>
         <h2 style="font-size: 1.5em;">AI Research Faculty and Applied Physicist @ NCKU School of Computing and @ AI Startups</h2>
         <p class="contact">Connect with me at:     
             <a href="mailto:lukelu0975@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
@@ -148,6 +148,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
