--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     
         <h2>Selected Conferences</h2>
         <ol>
-            <li>CoVaPh: A Vision-Language Multi-Agent Dialogue System for Tool-Augmented Pharmacogenetic Reasoning and Personalized Guidance, S.-C. Lu, H. Yang et al., submitted to ACL IWSDS 2026.</li>
+            <li>CoVaPh: A Vision-Language Multi-Agent Dialogue System for Tool-Augmented Pharmacogenetic Reasoning and Personalized Guidance, S.-C. Lu, H. Yang et al., accepted for oral at ACL IWSDS 2026.</li>
             <li>Atomistic Design of Multilayer Black Phosphorus Vertical Tunnel FETs based on Coupled DFT and NEGF method, S.-C. Lu et al., 20th IWCN, Evanston, IL, May 20-24, 2019.</li>
             <li>Design Guidelines and Limitations of Multilayer Two-dimensional Vertical Tunneling FETs for Ultra Low Power Logic Applications, S.-C. Lu et al., SISPAD 2018, Austin, TX, Sept. 24-26, 2018.</li>
             <li><a href="https://ieeexplore.ieee.org/document/8085335/">Modeling of black phosphorus vertical TFETs without chemical doping for drain</a>, S.-C. Lu et al., SISPAD 2017, Kamakura, Japan, Sept. 7-9, 2017.</li>
@@ -148,6 +148,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
