--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
         </p>
 
         <div class="announcements">
+            <p><span class="blinking-emoji">🔥</span> Breaking News: Our paper submitted to 2026 ACL IWSDS "CoVaPh: A Vision-Language Multi-Agent Dialogue System for Tool-Augmented Pharmacogenetic Reasoning and Personalized Guidance" was accepted for an oral presentation!</p>
             <p><span class="blinking-emoji">🎉</span> Exciting News! Our project, "AI for Walking Stability Assessment with 3D Virtual Environment Training" with Stanford researchers, has been selected by Nvidia for the 2025 Nvidia Academic Grant Award, granting us 40,000+ A100 GPU-Hours on dedicated DGX Cloud!</p>
             <p><span class="blinking-emoji">🌟</span> We’re Hiring! Join our team! We invite brilliant AI researchers and passionate students worldwide, especially those excited about spatial AI, reasoning VLMs/LLMs, and robotics, to help advance this cutting-edge field!</p>
         </div>
@@ -148,6 +149,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
