--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <body>
     <div class="content">
         <h1>Luke (Shang-Chun) Lu</h1>
-        <h2 style="font-size: 1.5em;">AI Research Faculty and Applied Physicist @ NCKU School of Computing and @ AI Startups</h2>
+        <h2 style="font-size: 1.5em;">AI Research Faculty and Applied Physicist @ NCKU and @ AI Startups</h2>
         <p class="contact">Connect with me at:     
             <a href="mailto:lukelu0975@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
             <a href="https://x.com/groccy1/">X</a>
@@ -149,6 +149,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
