--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     
         <h2>Work Experience</h2>
         <ul>
-            <li><strong>Principal Investigator in AI, Miin Wu School of Computing, NCKU (Feb 2025 – present)</strong>: Launching AI R&D initiatives, including post-training Thinking LLMs/VLMs with advanced reasoning, visual RAG reasoning agents for medical use, finetuning Robotics models (with 3D World Models), and planning AI infrastructure.</li>
+            <li><strong>Principal Investigator in AI, NCKU (Feb 2025 – present)</strong>: Launching AI R&D initiatives, including post-training Thinking LLMs/VLMs with advanced reasoning, visual RAG reasoning agents for medical use, finetuning Robotics models (with 3D World Models), and planning AI infrastructure.</li>
             <li><strong>VLM Advisor/Lead Architect, Rayleigh Vision Intelligence Co. Ltd. (Dec 2024 – present)</strong>: Architecting VLM solutions and coordinating with infra/manufacturing teams to support Micro LED customers.</li>
             <li><strong>Head of Gen AI, Rengiantek AI (Dec 2023 – Dec 2024)</strong>: Led projects building RAG Agents with LangGraph, finetuning LLMs for academic peer reviews, and developing fall detection visual AI agents using Nvidia tools for eldercare in large facilities.</li>
             <li><strong>Staff R&D Engineer, Deep Learning, SanDisk (May 2020 – Nov 2023)</strong>: Led DL projects like training Mask-RCNN/Transformers for wafer inspection (reducing time by 90%+), SAM auto-labelers, LLM fine-tuning for semiconductor data, and VAEs for pattern generation.</li>
@@ -149,6 +149,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
