--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </p>
 
         <div class="announcements">
-            <p><span class="blinking-emoji">🔥</span> Breaking News: Our paper submitted to 2026 ACL IWSDS "CoVaPh: A Vision-Language Multi-Agent Dialogue System for Tool-Augmented Pharmacogenetic Reasoning and Personalized Guidance" was accepted for oral presentation!</p>
+            <p><span class="blinking-emoji">🔥</span> Breaking News: Our paper submitted to 2026 ACL IWSDS "CoVaPh: A Vision-Language Multi-Agent Dialogue System for Tool-Augmented Pharmacogenetic Reasoning and Personalized Guidance" was accepted for Oral presentation!</p>
             <p><span class="blinking-emoji">🎉</span> Exciting News! Our project, "AI for Walking Stability Assessment with 3D Virtual Environment Training" with Stanford researchers, has been selected by Nvidia for the 2025 Nvidia Academic Grant Award, granting us 40,000+ A100 GPU-Hours on dedicated DGX Cloud!</p>
             <p><span class="blinking-emoji">🌟</span> We’re Hiring! Join our team! We invite brilliant AI researchers and passionate students worldwide, especially those excited about spatial AI, reasoning VLMs/LLMs, and robotics, to help advance this cutting-edge field!</p>
         </div>
@@ -129,7 +129,8 @@
     
         <h2>Selected Conferences</h2>
         <ol>
-            <li>CoVaPh: A Vision-Language Multi-Agent Dialogue System for Tool-Augmented Pharmacogenetic Reasoning and Personalized Guidance, S.-C. Lu, H. Yang et al., accepted for oral at ACL IWSDS 2026.</li>
+            <li>S.-C. Lu, M.-C. Shih, et al.,“Learning to Cascade: RL-Driven Orchestration of Hierarchical VLM Councils for Efficient Scientific Reasoning,” Submitted to the 43rd International Conference on Machine Learning (ICML 2026).</li>
+            <li>CoVaPh: A Vision-Language Multi-Agent Dialogue System for Tool-Augmented Pharmacogenetic Reasoning and Personalized Guidance, S.-C. Lu, H. Yang et al., accepted for Oral at ACL IWSDS 2026.</li>
             <li>Atomistic Design of Multilayer Black Phosphorus Vertical Tunnel FETs based on Coupled DFT and NEGF method, S.-C. Lu et al., 20th IWCN, Evanston, IL, May 20-24, 2019.</li>
             <li>Design Guidelines and Limitations of Multilayer Two-dimensional Vertical Tunneling FETs for Ultra Low Power Logic Applications, S.-C. Lu et al., SISPAD 2018, Austin, TX, Sept. 24-26, 2018.</li>
             <li><a href="https://ieeexplore.ieee.org/document/8085335/">Modeling of black phosphorus vertical TFETs without chemical doping for drain</a>, S.-C. Lu et al., SISPAD 2017, Kamakura, Japan, Sept. 7-9, 2017.</li>
@@ -149,6 +150,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
