--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
             <li><strong>VLM Advisor/Lead Architect, Rayleigh Vision Intelligence Co. Ltd. (Dec 2024 – present)</strong>: Architecting VLM solutions and coordinating with infra/manufacturing teams to support Micro LED customers.</li>
             <li><strong>Head of Gen AI, Rengiantek AI (Dec 2023 – Dec 2024)</strong>: Led projects building RAG Agents with LangGraph, finetuning LLMs for academic peer reviews, and developing fall detection visual AI agents using Nvidia tools for eldercare in large facilities.</li>
             <li><strong>Staff R&D Engineer, Deep Learning, SanDisk (May 2020 – Nov 2023)</strong>: Led DL projects like training Mask-RCNN/Transformers for wafer inspection (reducing time by 90%+), SAM auto-labelers, LLM fine-tuning for semiconductor data, and VAEs for pattern generation.</li>
-            <li><strong>Personal AI Project (2021 – 2022)</strong>: Used Mask-RCNN, CNN, and GenAI to create digital arts.</li>
+            <li><strong>Personal AI Project (2021 – 2022)</strong>: Used Mask-RCNN, CNN, and GenAI to create digital artworks.</li>
             <li><strong>Transistor Reliability R&D Engineer / Data Scientist, Intel Corp. (May 2019 – May 2020)</strong>: Analyzed transistor reliability using ML models (e.g., regression, random forest) to automate data processing and support process development.</li>
             <li><strong>Visiting Student Scientist, MIT (Nov 2017 – April 2019)</strong>: Designed post-CMOS transistors and explored materials for quantum computing using DFT + ML and NEGF for electron transport simulations.</li>
         </ul>
     
         <h2>Selected Conferences</h2>
         <ol>
-            <li>S.-C. Lu, M.-C. Shih, et al.,“Learning to Cascade: RL-Driven Orchestration of Hierarchical VLM Councils for Efficient Scientific Reasoning,” Submitted to the 43rd International Conference on Machine Learning (ICML 2026).</li>
+            <li>Learning to Cascade: RL-Driven Orchestration of Hierarchical VLM Councils for Efficient Scientific Reasoning, S.-C. Lu, M.-C. Shih et al., submitted to the 43rd International Conference on Machine Learning (ICML).</li>
             <li>CoVaPh: A Vision-Language Multi-Agent Dialogue System for Tool-Augmented Pharmacogenetic Reasoning and Personalized Guidance, S.-C. Lu, H. Yang et al., accepted for Oral at ACL IWSDS 2026.</li>
             <li>Atomistic Design of Multilayer Black Phosphorus Vertical Tunnel FETs based on Coupled DFT and NEGF method, S.-C. Lu et al., 20th IWCN, Evanston, IL, May 20-24, 2019.</li>
             <li>Design Guidelines and Limitations of Multilayer Two-dimensional Vertical Tunneling FETs for Ultra Low Power Logic Applications, S.-C. Lu et al., SISPAD 2018, Austin, TX, Sept. 24-26, 2018.</li>
@@ -150,6 +150,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
