--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     
         <h2>Selected Conferences</h2>
         <ol>
-            <li>Learning to Cascade: RL-Driven Orchestration of Hierarchical VLM Councils for Efficient Scientific Reasoning, S.-C. Lu, M.-C. Shih et al., submitted to the 43rd International Conference on Machine Learning (ICML).</li>
+            <li>Learning to Cascade: RL-Driven Orchestration of Hierarchical VLM Councils for Efficient Scientific Reasoning, S.-C. Lu, M.-C. Shih et al., submitted to the 43rd International Conference on Machine Learning (ICML 2026).</li>
             <li>CoVaPh: A Vision-Language Multi-Agent Dialogue System for Tool-Augmented Pharmacogenetic Reasoning and Personalized Guidance, S.-C. Lu, H. Yang et al., accepted for Oral at ACL IWSDS 2026.</li>
             <li>Atomistic Design of Multilayer Black Phosphorus Vertical Tunnel FETs based on Coupled DFT and NEGF method, S.-C. Lu et al., 20th IWCN, Evanston, IL, May 20-24, 2019.</li>
             <li>Design Guidelines and Limitations of Multilayer Two-dimensional Vertical Tunneling FETs for Ultra Low Power Logic Applications, S.-C. Lu et al., SISPAD 2018, Austin, TX, Sept. 24-26, 2018.</li>
@@ -150,6 +150,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
